# skill-cellar

./: .gitignore  CLAUDE.md  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
core/: Cargo.toml
core/fixtures/registry/: sample_manifest.json
core/fixtures/skills/bad-yaml/: SKILL.md
core/fixtures/skills/long-desc/: SKILL.md
core/fixtures/skills/no-desc/: SKILL.md
core/fixtures/skills/warn-compat/: SKILL.md
core/fixtures/skills/web-fetch/: SKILL.md
core/fixtures/skills/web-fetch-mismatch/: SKILL.md
core/src/: error.rs  lib.rs
core/src/conformance/: frontmatter.rs  mod.rs  rules.rs  verdict.rs
core/src/fs_skills/: atomic.rs  mod.rs  source.rs
core/src/projects/: mod.rs
core/src/registry/: cache.rs  default_registry.json  fetcher.rs  mod.rs  parse.rs
core/src/usage/: mod.rs
core/tests/: fixtures.rs  install_atomic.rs  install_from_registry.rs  usage.rs
docs/superpowers/specs/: 2026-05-29-skill-cellar-design.md
specs/: CONSTITUTION.md  DECISIONS.md
specs/INTENT/I-1-skill-cellar-desktop-librarian/: intent.md
specs/INTENT/I-2-usage-analytics/: intent.md
specs/INTENT/I-3-craft-skill-editor/: implementation-plan.md  intent.md
specs/INTENT/I-4-privacy-and-sync-boundary/: intent.md  plan.md
specs/INTENT/I-5-shop-catalog-source/: intent.md
specs/INTENT/I-6-surface-plugin-managed-skills/: intent.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  http_fetcher.rs  http_skill_fetcher.rs  lib.rs  main.rs  state.rs
src/api/: bindings.ts  client.ts
src/components/: ConformanceBadge.tsx  InstalledRow.tsx  SkillCard.tsx  Tabs.tsx  TitleBar.tsx
src/core/: errors.ts
src/core/conformance/: conformance.test.ts  frontmatter.ts  index.ts  rules.ts  verdict.ts
src/core/fs-skills/: atomic.ts  index.ts  install.ts  install_atomic.test.ts  install_from_registry.test.ts  plugins.test.ts  plugins.ts  publish.test.ts  source.ts
src/core/registry/: cache.ts  fetcher.ts  index.ts  parse.ts  registry.test.ts  types.ts
src/core/sync/: index.ts  sync.test.ts
src/core/usage/: index.ts  usage.test.ts
src/craft/: skillmd.ts
src/lib/: fetchers.ts  paths.ts  settings.ts
src/screens/: Craft.test.tsx  CraftScreen.tsx  Library.tsx  LibraryScreen.tsx  Market.tsx  Settings.tsx  Shop.test.tsx  ShopScreen.tsx  UsageScreen.tsx
src/state/: AppContext.tsx
