[package]
name = "skill-cellar-core"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust core for skill-cellar: agentskills.io conformance, atomic install, and offline-capable registry. No Tauri or network deps so it builds and tests anywhere."
license = "MIT"

[lib]
name = "skill_cellar_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
# Pinned: newer tempfile pulls getrandom 0.4 which needs edition2024 (Cargo >=1.78).
tempfile = "=3.8.1"
fs_extra = "1"
walkdir = "2"
# Optional: lets the Tauri shell generate TypeScript bindings (tauri-specta).
# Off by default so this crate and its tests build with no extra toolchain.
specta = { version = "2.0.0-rc.20", optional = true, features = ["derive"] }

[features]
# Enabled by the `src-tauri` shell; derives `specta::Type` on the IPC DTOs.
specta = ["dep:specta"]

[dev-dependencies]
tempfile = "=3.8.1"
