[package]
name = "skill-cellar"
version = "0.1.0"
edition = "2021"
description = "skill-cellar — a desktop librarian for AI-agent skills"
license = "MIT"
# Tauri v2 requires a recent Rust; this crate is not buildable on toolchains
# older than Tauri's MSRV (1.77.2+). The pure-logic `core` crate has no such
# requirement and is where the I-1 outcomes are tested.
rust-version = "1.77.2"

[lib]
name = "skill_cellar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Native folder picker for "Install from folder" (the working local-dir install
# path; the GitHub-fetch shop install is the follow-on). Only a path picker —
# the privileged FS work stays in the typed `install_local_skill` core command.
tauri-plugin-dialog = "2"
# Dev-only WebSocket bridge that lets the Tauri MCP server drive the running
# app for manual verification. Optional + behind the `mcp-bridge` feature so it
# is NEVER compiled into release builds; enabled only by `bun run tauri:dev`.
tauri-plugin-mcp-bridge = { version = "0.11", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Blocking reqwest: the core's RegistryFetcher trait is synchronous; the Tauri
# command layer runs it off the UI thread.
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "gzip",
] }
skill-cellar-core = { path = "../core", features = ["specta"] }
# The shop's GitHub-fetch install (D-14) materializes an entry's files into a
# temp dir before the core's validate-then-copy install. Pinned to match the
# core: newer tempfile pulls getrandom 0.4 which needs edition2024 (Cargo >=1.78).
tempfile = "=3.8.1"

# Type-safe TS bindings generated from the #[tauri::command] fns.
# Pinned to a mutually-compatible rc.20 set (matches `core`'s specta = rc.20).
# Exact `=` pins are required: caret on a pre-release floats forward — e.g.
# `^2.0.0-rc.21` resolves tauri-specta to rc.22, which demands specta rc.22 and
# conflicts with specta-typescript 0.0.7 (which pins specta rc.20).
specta = { version = "=2.0.0-rc.20", features = ["derive"] }
specta-typescript = "=0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }

[features]
# Compile in the dev-only MCP bridge plugin. Off by default → absent from
# release builds. The matching webview capability + withGlobalTauri are supplied
# only by `tauri.dev.conf.json`, so production config stays untouched.
mcp-bridge = ["dep:tauri-plugin-mcp-bridge"]
